Updated the tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-server.port = 8082
+server.port = 8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/blorbo
+spring.datasource.url=jdbc:postgresql://travellers-guild-server.postgres.database.azure.com:5432/postgres?user=theo&password=aA!12345678&sslmode=require
 spring.datasource.username=theo
-spring.datasource.password=12345678
+spring.datasource.password=aA!12345678
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.web.access.intercept.FilterSecurityInterceptor=DEBUG
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-
 
 #spring.jpa.hibernate.ddl-auto=create
