Fixed a small config mishap

--- a/.github/workflows/main_travellers-guild.yml
+++ b/.github/workflows/main_travellers-guild.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           java-version: '21'
 
+      - name: Clean with Maven
+        run: mvn clean package
+
       - name: Build with Maven
         run: mvn clean install
 
@@ -28,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
