Fixed another small config mishap

--- a/.github/workflows/main_travellers-guild.yml
+++ b/.github/workflows/main_travellers-guild.yml
@@ -61,5 +61,5 @@ jobs:
         with:
           app-name: 'travellers-guild'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
